fix on menu including search and jumping

--- a/component-lib/src/molecules/Menu/Menu.pcss
+++ b/component-lib/src/molecules/Menu/Menu.pcss
@@ -24,7 +24,7 @@
     }
 
     &__logo {
-        max-width: 4rem;
+        max-width: 5rem;
 
         @media all and (min-width: rem(600)) {
             min-width: 7rem;
@@ -36,17 +36,10 @@
         }
     }
 
-    &__heading {
-        display:flex;
-        justify: space-around;
-        flex-grow: 1;
-        list-style: none;
-    }
-
     &__heading-item, &__item {
         background: none;
         border: none;
-        border-bottom: solid 1px transparent;
+        border-bottom: 2px solid transparent;
         cursor: pointer;
         font-family: 'Helvetica Neue Medium';
         font-size: 1em;
@@ -62,11 +55,6 @@
             display: block;
         }
 
-        &:hover {
-            margin-top: -2px;
-            border-bottom: 2px solid var(--core-purple);
-        }
-
         &:focus {
             background-color: transparent;
             border-bottom: 2px solid var(--core-purple);
@@ -74,10 +62,57 @@
         }
     }
 
-    &__heading-item {
+    &__heading {
+        display:flex;
+        justify: space-around;
+        flex-grow: 1;
+        list-style: none;
 
-        &--active {
-            margin-top: -2px;
+         &-item {
+            position: relative;
+            font-family: 'Helvetica Neue Medium';
+            font-size: 0.89em;
+
+            &:after {
+                content: '';
+                display: block;
+                border-bottom: 2px solid var(--core-purple);
+                width: 0;
+                position: absolute;
+                left: 0;
+                -webkit-transition: 0.5s ease;
+                transition: 0.5s ease;
+            }
+
+            &:hover{
+                border-bottom: 2px solid transparent;
+
+                &:after {
+                    width: 100%;
+                }
+            }
+
+             &--active {
+                &:after {
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    &__item {
+        background: none;
+        border: none;
+        border-bottom: 2px solid transparent;
+        cursor: pointer;
+        font-family: 'Helvetica Neue Medium';
+        font-size: 1em;
+        transition: all .1s ease-in;
+        margin: 0;
+        margin-right: 1.875rem;
+        padding-bottom: 2px;
+
+        &:hover {
             border-bottom: 2px solid var(--core-purple);
         }
     }
@@ -135,12 +170,23 @@
         padding-left: 0;
         font-size: 0.675rem;
 
+
         &-icon {
             * {
                 fill: none;
                 stroke: black;
                 stroke-width: 30;
             }
+        }
+
+        @media all and (max-width: rem(1120)) {
+            width: 6rem;
+            padding: 0;
+            text-align: center;
+        }
+
+        @media all and (max-width: rem(600)) {
+            width: 4rem;
         }
 
         @media all and (min-width: rem(600)) {
@@ -166,14 +212,14 @@
 
     &__login-button-icon {
         display: block;
-        height: 1.2rem;
-        width: 3rem;
+        height: 1rem;
+        width: 4rem;
         margin-bottom: 0.8rem;
 
         @media all and (min-width: rem(600)) {
             height: 2rem;
-            width: 5rem;
-            margin-bottom: 0.7rem;
+            width: 6rem;
+            margin-bottom: 0.8rem;
         }
 
         @media all and (min-width: rem(1120)) {
@@ -189,6 +235,13 @@
         box-shadow: none;
         background-color: transparent;
         border: none;
+        width: 4rem;
+        padding: 0;
+        text-align: center;
+
+        @media all and (min-width: rem(600)) {
+            width: 6rem;
+        }
 
         @media all and (min-width: rem(1120)) {
             display: none;
@@ -207,28 +260,27 @@
         }
 
         &-icon{
-            height: 1.3rem;
-            width: 1rem;
+            height: 1rem;
+            width: 4rem;
             stroke: var(--black);
             stroke-width: 30;
+            margin-bottom: 0.55rem;
 
             @media all and (min-width: rem(600)) {
-                height: 1.9rem;
-                width: 1.9rem;
+                height: 2rem;
+                width: 6rem;
             }
         }
     }
 
     &__mobile-button-text {
         display: block;
-        margin-top: 0.4rem;
         text-transform: uppercase;
         font-family: 'Helvetica Neue Medium';
         font-size: 0.675rem;
 
         @media all and (min-width: rem(600)) {
-            font-size: 14px;
-            margin-top: 0.5rem;
+            font-size: 0.875rem;
         }
     }
 
